# my_cool_project

./: .gitignore  README.md  dependencies-nightly.lock.json  dependencies.json  dependencies.lock.json  import_dependencies.cmake  main.cpp
.github/: renovate-entrypoint.sh  renovate.json
.github/workflows/: renovatebot.yml
json_fetch_content/: CMakeLists.txt  README.md  dependencies-nightly.json  dependencies.json
vcpkg_based/: CMakeLists.txt  main.cpp  vcpkg.json
